--- a/articles/active-directory/user-help/index.yml
+++ b/articles/active-directory/user-help/index.yml
@@ -95,7 +95,7 @@ landingContent:
             url: my-account-portal-devices-page.md
           - text: Manage your organizations
             url: my-account-portal-organizations-page.md
-          - text: View your sign-in activity
+          - text: View your recent sign-in activity
             url: my-account-portal-sign-ins-page.md
   
   # Card
