--- a/articles/data-lake-analytics/index.yml
+++ b/articles/data-lake-analytics/index.yml
@@ -100,6 +100,18 @@ landingContent:
           - text: Use U-SQL SDK
             url: data-lake-analytics-u-sql-sdk.md
 
+  #Card (optional)
+  - title: Understand Spark for U-SQL developers
+    linkLists:
+      - linkListType: how-to-guide
+        links:
+          - text: Understand Apache Spark for U-SQL Developers
+            url: data-lake-analytics-understand-spark-for-usql-developers.md
+          - text: Understand Apache Spark data formats
+            url: data-lake-analytics-understand-spark-data-formats.md
+          - text: Understand Apache Spark code concepts
+            url: data-lake-analytics-understand-spark-code-concepts.md
+            
   # Card (optional)
   - title: Troubleshoot U-SQL jobs 
     linkLists:
