--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -40,7 +40,7 @@
         href: data-lake-analytics-manage-use-nodejs.md
     - name: Add users
       href: data-lake-analytics-add-users.md
-    - name: Account Policies
+    - name: Account policies
       href: data-lake-analytics-account-policies.md
     - name: Secure job folders
       href: data-lake-analytics-secure.md
