--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -163,7 +163,10 @@
       href: how-to-monitor-datasets.md
     - name: Version & track datasets
       displayName: data, data set
-      href: how-to-version-track-datasets.md      
+      href: how-to-version-track-datasets.md     
+    - name: Create labeling projects
+      displayName: data, dataset, labeling
+      href: how-to-create-labeling-projects.md
   - name: Train models
     items:
     - name: Use the designer
