--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -51,6 +51,11 @@
       items:
       - name: T-SQL
         href: quickstart-create-a-workload-classifier-tsql.md
+    items: 
+    - name: Create workload isolation
+      items:
+      - name: T-SQL
+        href: quickstart-configure-workload-isolation-tsql.md.md
 - name: Concepts
   items:
   - name: Security
@@ -213,12 +218,16 @@
       href: sql-data-warehouse-develop-label.md
   - name: Workload management
     items:
-    - name: Resource classes & workload management
-      href: resource-classes-for-workload-management.md
+    - name: Overview
+      href: sql-data-warehouse-workload-management.md
     - name: Workload classification
       href: sql-data-warehouse-workload-classification.md
     - name: Workload importance
       href: sql-data-warehouse-workload-importance.md
+    - name: Workload isolation
+      href: sql-data-warehouse-workload-isolation.md
+    - name: Resource classes & workload management
+      href: resource-classes-for-workload-management.md
     - name: Memory & concurrency limits
       href: memory-and-concurrency-limits.md
   - name: Manageability & monitoring
@@ -301,6 +310,8 @@
       href: sql-data-warehouse-how-to-manage-and-monitor-workload-importance.md 
     - name: Configure workload importance
       href: sql-data-warehouse-how-to-configure-workload-importance.md 
+    - name: Convert resource classes to workload groups
+      href: sql-data-warehouse-how-to-convert-resource-classes-workload-groups.md
   - name: Manage and monitor
     items:
     - name: Upgrade to Gen2
