Troubleshoot edits and removing double space

--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -126,6 +126,12 @@
       href: data-lake-analytics-understand-spark-data-formats.md
     - name: Understand Apache Spark code concepts
       href: data-lake-analytics-understand-spark-code-concepts.md
+  - name: Troubleshoot U-SQL jobs
+    items:
+    - name: Troubleshoot U-SQL runtime changes
+      href: data-lake-analytics-runtime-troubleshoot.md
+    - name: Troubleshoot a .NET upgrade
+      href: data-lake-analytics-dotnet-upgrade-troublehoot.md
 - name: Reference
   items:
   - name: Azure PowerShell
