--- a/articles/data-lake-analytics/index.yml
+++ b/articles/data-lake-analytics/index.yml
@@ -111,3 +111,13 @@ landingContent:
             url: data-lake-analytics-understand-spark-data-formats.md
           - text: Understand Apache Spark code concepts
             url: data-lake-analytics-understand-spark-code-concepts.md
+
+  # Card (optional)
+  - title: Troubleshoot U-SQL jobs 
+    linkLists:
+      - linkListType: how-to-guide
+        links:
+         - text: Troubleshoot U-SQL runtime
+           url: data-lake-analytics-runtime-troubleshoot.md
+         - text: Troubleshoot a .NET upgrade
+           url: data-lake-analytics-dotnet-upgrade-troublehoot.md
