--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -364,12 +364,12 @@
         href: iot-hub-monitoring-notifications-with-azure-logic-apps.md
   - name: Troubleshoot
     items:
-    - name: Troubleshoot errors
+    - name: Find Azure IoT Hub errors
       href: iot-hub-troubleshoot-errors.md
-      -name: Problem resolution
+    - name: Problem resolution
       items:
-        - name: 401002 AuthenticationFailed
-          href: iot-hub-troubleshoot-error-401002-authenticationfailed.md
+      - name: 401002 AuthenticationFailed
+        href: iot-hub-troubleshoot-error-401002-authenticationfailed.md
     - name: Device disconnections TO BE REMOVED
       href: iot-hub-troubleshoot-connectivity.md
 - name: Reference
