How to label images initial commit

--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -167,6 +167,9 @@
     - name: Create labeling projects
       displayName: data, dataset, labeling
       href: how-to-create-labeling-projects.md
+    - name: Label images
+      displayName: data, dataset, labeling
+      href: how-to-label-images.md
   - name: Train models
     items:
     - name: Use the designer
