--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -53,7 +53,7 @@
     href: functions-create-function-linux-custom-image.md
   - name: Functions on IoT Edge device
     href: ../iot-edge/tutorial-deploy-function.md?toc=%2fazure%2fazure-functions%2ftoc.json
-  - name: Java with Event Hub and Cosmos DB
+  - name: Java with Azure Cosmos DB and Event Hubs
     href: functions-eventhub-cosmosdb.md
 - name: Samples
   items:
