--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -8,7 +8,7 @@
     href: durable-functions-overview.md
   - name: Serverless comparison
     href: ../functions-compare-logic-apps-ms-flow-webjobs.md?toc=%2fazure%2fazure-functions%2fdurable%2ftoc.json
-  - name: Preview features
+  - name: Durable Functions versions
     href: durable-functions-versions.md
 - name: Quickstarts
   expanded: true
