--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -269,7 +269,7 @@
     #  - name: What is SQL Analytics pool and SQL on demand
     #    href: 
       - name: SQL Analytics on-demand 
-        href: sql-analytics/sql-analytics-on-demand.md
+        href: sql-analytics/on-demand.md
       - name: SQL Analytics pool 
         href: ../sql-data-warehouse/sql-data-warehouse-overview-what-is.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
       - name: Architecture
