added new article on using key vault secrets in adf pipeline activities

--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -393,6 +393,8 @@
       href: data-movement-security-considerations.md
     - name: Store credentials in Azure Key Vault
       href: store-credentials-in-key-vault.md
+    - name: Use Key Vault secrets in pipeline activities
+      href: how-to-use-azure-key-vault-secrets-in-pipeline-activities.md
     - name: Encrypt credentials for self-hosted integration runtime
       href: encrypt-credentials-self-hosted-integration-runtime.md
     - name: Data factory service identity
