--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -31,6 +31,18 @@
     href: active-directory-data-storage-eu.md
   - name: What's new in Microsoft 365 Government
     href: whats-new-microsoft-365-government.md
+  - name: Azure AD Operations reference
+    items:
+    - name: Introduction
+      href: active-directory-ops-guide-aintro.md
+    - name: Identity and access management
+      href: active-directory-ops-guide-biam.md
+    - name: Authentication management
+      href: active-directory-ops-guide-cauth.md
+    - name: Identity governance
+      href: active-directory-ops-guide-dgovern.md
+    - name: Operations
+      href: active-directory-ops-guide-eops.md
 - name: 'How-to guides'
   expanded: true
   items:
