--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -83,6 +83,8 @@
   items:
   - name: Full-text search
     href: search-lucene-query-architecture.md
+  - name: Indexers
+    href: search-indexer-overview.md
   - name: AI enrichment
     href: cognitive-search-concept-intro.md
   - name: Skillsets
@@ -143,7 +145,7 @@
         href: search-dotnet-mgmt-sdk-migration.md
     - name: Upgrade the REST API
       href: search-api-migration.md
-  - name: Create indexes
+  - name: Creating indexes
     items:
     - name: Create a basic index
       href: search-what-is-an-index.md
@@ -175,55 +177,55 @@
       href: search-howto-complex-data-types.md
     - name: Model relational data
       href: index-sql-relational-data.md
-  - name: Indexing any data
+  - name: Import (indexing)
     items:
-    - name: Data import overview
-      href: search-what-is-data-import.md
-    - name: Import data (portal)
-      href: search-import-data-portal.md
-    - name: Rebuild an index
-      href: search-howto-reindex.md
-    - name: Index large data sets
-      href: search-howto-large-index.md
-    - name: Handle concurrent updates
-      href: search-howto-concurrency.md
-  - name: Indexing Azure Blob data
-    items:      
-    - name: Use AI with blob data
-      href: search-blob-ai-integration.md
-    - name: Add full text search
-      href: search-blob-storage-integration.md
-    - name: Set up a blob indexer
-      href: search-howto-indexing-azure-blob-storage.md
-    - name: Index one-to-many blobs
-      href: search-howto-index-one-to-many-blobs.md
-    - name: Index CSV blobs
-      href: search-howto-index-csv-blobs.md
-    - name: Index JSON blobs
-      href: search-howto-index-json-blobs.md
-  - name: Indexing with "indexers"
-    items:
-    - name: Indexers overview
-      href: search-indexer-overview.md
-    - name: Azure Table Storage indexer
-      href: search-howto-indexing-azure-tables.md
-    - name: Azure SQL DB indexer
-      href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
-    - name: Azure Cosmos DB indexer
-      href: search-howto-index-cosmosdb.md
-    - name: Schedule indexers
-      href: search-howto-schedule-indexers.md
-    - name: Map fields
-      href: search-indexer-field-mappings.md
-    - name: Connect to SQL Managed Instance
-      href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
-    - name: Connect to SQL Server VMs
-      href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
-    - name: Monitor indexers
-      href: search-howto-monitor-indexers.md
-    - name: Troubleshoot common issues
-      href: search-indexer-troubleshooting.md
-  - name: Enrich with AI
+    - name: Basics
+      items:
+      - name: Data import overview
+        href: search-what-is-data-import.md
+      - name: Import data (portal)
+        href: search-import-data-portal.md
+      - name: Rebuild an index
+        href: search-howto-reindex.md
+      - name: Handle concurrent updates
+        href: search-howto-concurrency.md
+      - name: Index large data sets
+        href: search-howto-large-index.md
+    - name: Indexers
+      items:
+      - name: Blob storage indexing
+        items:      
+        - name: Use AI with blob data
+          href: search-blob-ai-integration.md
+        - name: Add full text search
+          href: search-blob-storage-integration.md
+        - name: Set up a blob indexer
+          href: search-howto-indexing-azure-blob-storage.md
+        - name: Index one-to-many blobs
+          href: search-howto-index-one-to-many-blobs.md
+        - name: Index CSV blobs
+          href: search-howto-index-csv-blobs.md
+        - name: Index JSON blobs
+          href: search-howto-index-json-blobs.md
+      - name: Table storage indexing
+        href: search-howto-indexing-azure-tables.md
+      - name: SQL DB indexing
+        href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
+      - name: Cosmos DB indexing
+        href: search-howto-index-cosmosdb.md
+      - name: SQL Managed Instance indexing
+        href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
+      - name: SQL Server on Azure VMs
+        href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
+      - name: Schedule indexers
+        href: search-howto-schedule-indexers.md
+      - name: Map fields in indexers
+        href: search-indexer-field-mappings.md
+      - name: Monitor indexers
+        href: search-howto-monitor-indexers.md
+      - name: Troubleshoot indexer issues
+        href: search-indexer-troubleshooting.md
+  - name: Enrichment (cognitive skills)
     items:
     - name: Attach a Cognitive Services resource
       href: cognitive-search-attach-cognitive-services.md
@@ -261,7 +263,7 @@
         href: knowledge-store-connect-power-bi.md
     - name: Troubleshoot enrichment issues
       href: cognitive-search-common-errors-warnings.md    
-  - name: Query documents
+  - name: Querying
     items:
     - name: Query types and composition
       href: search-query-overview.md
@@ -271,12 +273,16 @@
       href: search-query-lucene-examples.md
     - name: Use Search Explorer (portal)
       href: search-explorer.md
-    - name: Simple query syntax
-      href: query-simple-syntax.md
-    - name: Full Lucene query syntax
-      href: query-lucene-syntax.md
-    - name: moreLikeThis (preview)
-      href: search-more-like-this.md
+    - name: Find exact matches
+      href: search-query-exact-values.md
+    - name: Reference
+      items:
+      - name: Simple query syntax
+        href: query-simple-syntax.md
+      - name: Full Lucene query syntax
+        href: query-lucene-syntax.md
+      - name: moreLikeThis (preview)
+        href: search-more-like-this.md
   - name: Apply filters
     items:
     - name: Filter overview
