--- a/articles/azure-arc/toc.yml
+++ b/articles/azure-arc/toc.yml
@@ -3,14 +3,14 @@
 - name: Overview
   expanded: true
   items:
-  - name: What is Azure Arc for Servers?
+  - name: What is Azure Arc for servers?
     href: ./servers/overview.md
 - name: Quickstarts
   expanded: true
   items:
-  - name: Connect machines to Azure using Azure Arc for Servers - Portal
+  - name: Connect machines to Azure using Azure Arc for servers - Portal
     href: ./servers/quickstart-onboard-portal.md
-  - name: Connect machines to Azure using Azure Arc for Servers - PowerShell
+  - name: Connect machines to Azure using Azure Arc for servers - PowerShell
     href: ./servers/quickstart-onboard-powershell.md
 - name: Reference
   items:
