Ring Central provisioning tutorial

--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -1615,6 +1615,8 @@
         href: reward-gateway-provisioning-tutorial.md
       - name: RFPIO
         href: rfpio-provisioning-tutorial.md
+      - name: RingCentral
+        href: ringcentral-provisioning-tutorial.md
       - name: Robin
         href: robin-provisioning-tutorial.md
       - name: Rollbar
