--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Azure Arc
-summary: Azure Arc extends Azure Resource Manager capabilities to Linux and Windows servers, as well as Kubernetes clusters on any infrastructure across on-premises, multi-cloud, and edge. With Azure Arc, customers can also run Azure data services anywhere, realizing the benefits of cloud innovation, including always up-to-date data capabilities, deployment in seconds (rather than hours), and dynamic scalability on any infrastructure. Azure Arc server management is currently in public preview.
+summary: Azure Arc extends Azure Resource Manager capabilities to Linux and Windows servers, as well as Kubernetes clusters on any infrastructure across on-premises, multi-cloud, and edge. With Azure Arc, customers can also run Azure data services anywhere, realizing the benefits of cloud innovation, including always up-to-date data capabilities, deployment in seconds (rather than hours), and dynamic scalability on any infrastructure. Azure Arc for server management is currently in public preview.
 
 metadata:
   title: Azure Arc for servers
@@ -9,7 +9,7 @@ metadata:
   manager: carmonm
   ms.service: azure-arc
   ms.topic: landing-page
-  ms.date: 10/01/2019
+  ms.date: 11/04/2019
   ms.author: robreed
 
 landingContent:
