--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Azure Arc
-summary: Azure Arc extends Azure Resource Manager capabilities to Linux and Windows servers, as well as Kubernetes clusters on any infrastructure across on-premises, multi-cloud, and edge. With Azure Arc, customers can also run Azure data services anywhere, realizing the benefits of cloud innovation, including always up-to-date data capabilities, deployment in seconds (rather than hours), and dynamic scalability on any infrastructure. Azure Arc for server management is currently in public preview.
+summary: Azure Arc extends Azure Resource Manager capabilities to Linux and Windows servers, as well as Kubernetes clusters on any infrastructure across on-premises, multi-cloud, and edge. With Azure Arc, customers can also run Azure data services anywhere, realizing the benefits of cloud innovation, including always up-to-date data capabilities, deployment in seconds (rather than hours), and dynamic scalability on any infrastructure. Azure Arc for servers is currently in public preview.
 
 metadata:
   title: Azure Arc for servers
@@ -13,12 +13,20 @@ metadata:
   ms.author: robreed
 
 landingContent:
-  - title: Connect machines to Azure using Azure Arc for servers
+  
+  - title: Azure Arc overview
     linkLists:
+     - linkListType: overview
+       links:
+          - text: Learn more about Azure Arc
+            url: https://aka.ms/Azure-Arc-Info
+  
+  - title: Connect machines to Azure using Azure Arc for servers
+    linkLists: 
       - linkListType: overview
         links:
           - text: What is Azure Arc for servers?
-            url: ./servers/overview.md
+            url: ./servers/overview.md 
       - linkListType: quickstart
         links:
           - text: Connect machines to Azure using Azure Arc for servers - Portal
