Experimenting with region name

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -382,6 +382,11 @@
       "path_to_root": "azure-cosmosdb-java-v2",
       "url": "https://github.com/Azure/azure-cosmosdb-java",
       "branch": "master"
+    },
+    {
+      "path_to_root": "azure-cosmosdb-java-v4-getting-started",
+      "url": "https://github.com/kushagraThapar/azure-cosmos-java-getting-started/",
+      "branch": "code_region_update"
     }
   ],
   "branch_target_mapping": {
