added problem resolution template

--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -368,6 +368,8 @@
       href: iot-hub-troubleshoot-errors.md
     - name: Problem resolution
       items:
+      - name: Reference template
+        href: iot-hub-troubleshoot-error-reference-template.md
       - name: 401002 AuthenticationFailed
         href: iot-hub-troubleshoot-error-401002-authenticationfailed.md
     - name: Device disconnections TO BE REMOVED
