--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -65,6 +65,8 @@
     href: ipv6-public-ip-address-prefix.md
   - name: DDoS protection
     href: ddos-protection-overview.md
+  - name: Subnet extension 
+    href: subnet.extension.md
   - name: Backend Connectivity Interoperability
     items:
     - name: Preface and Test Setup
