--- a/articles/iot-central/TOC.yml
+++ b/articles/iot-central/TOC.yml
@@ -229,6 +229,8 @@
         - name: Manage jobs
           href: core/howto-manage-jobs-with-rest-api.md
         - name: Manage applications
+          href: core/howto-manage-dashboards-with-rest-api.md
+        - name: Manage dashboards    
           href: core/howto-manage-iot-central-with-rest-api.md
         - name: File upload
           href: core/howto-upload-file-rest-api.md
