--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -802,6 +802,8 @@
         href: evernote-tutorial.md
       - name: Evidence.com
         href: evidence-tutorial.md
+      - name: Evovia
+        href: evovia-tutorial.md
       - name: ExactCare SSO
         href: exactcare-sso-tutorial.md
       - name: Exceed.ai
