--- a/articles/cosmos-db/mongodb/TOC.yml
+++ b/articles/cosmos-db/mongodb/TOC.yml
@@ -269,6 +269,8 @@
           href: ../compliance.md
         - name: Data residency
           href: ../data-residency.md
+    - name: Jupyter notebooks
+      href: ../jupyter-notebooks.md
 - name: How to
   items:
     - name: Use developer tools
