Creating temporary CLI reference file

--- a/articles/dev-box/toc.yml
+++ b/articles/dev-box/toc.yml
@@ -42,6 +42,8 @@
       href: how-to-manage-network-connection.md
 - name: Reference
   items:
+    - name: Azure CLI
+      href: cli-ref-subset.md
     - name: REST API
       href: https://aka.ms/dev-box/restapidocs
 - name: Resources
