--- a/articles/cosmos-db/cassandra/TOC.yml
+++ b/articles/cosmos-db/cassandra/TOC.yml
@@ -253,7 +253,7 @@
     - name: Jupyter notebooks
       items:
         - name: Overview
-          href: ../notebooks.md
+          href: ../notebooks-overview.md
         - name: FAQ
           href: ../notebooks-faq.yml
 - name: How to
