--- a/articles/cosmos-db/mongodb/TOC.yml
+++ b/articles/cosmos-db/mongodb/TOC.yml
@@ -278,7 +278,7 @@
     - name: Jupyter notebooks
       items:
         - name: Overview
-          href: ../notebooks.md
+          href: ../notebooks-overview.md
         - name: FAQ
           href: ../notebooks-faq.yml
 - name: How to
