--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -65,6 +65,8 @@
   items: 
     - name: Create ML resources to get started
       href: quickstart-create-resources.md
+    - name: Run Jupyter notebooks
+      href: quickstart-run-notebooks.md
 - name: Tutorials
   expanded: true
   items: 
