Split into two articles

--- a/articles/dev-box/toc.yml
+++ b/articles/dev-box/toc.yml
@@ -40,6 +40,8 @@
       href: how-to-manage-dev-box-pools.md
     - name: Manage network connections
       href: how-to-manage-network-connection.md
+    - name: Microsoft Dev Box CLI
+      href: how-to-install-dev-box-cli.md  
 - name: Reference
   items:
     - name: Azure CLI
